<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyRegisterActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:elevation="1dp"
        android:src="@drawable/ic_back_white" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/r_up"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="header"
                    android:scaleType="fitXY"
                    android:src="@drawable/company" />

                <TextView
                    android:id="@+id/register_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/r_up"
                    android:layout_centerHorizontal="true"
                    android:text="@string/company_register_form"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <RelativeLayout
                    android:id="@+id/login_btn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:textColor="#BE2424"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/company_details"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-100dp"
                android:layout_marginTop="25dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="100dp"
                    android:layout_marginRight="50dp"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="-3dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:paddingLeft="10dp">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_company_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/company_name"
                            android:inputType="text"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/name"
                            android:background="@color/silver_line" />

                        <EditText
                            android:id="@+id/register_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view1"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_number_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/company_id"
                            android:inputType="text"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/register_no"
                            android:background="@color/silver_line" />


                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view2"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_location_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/address"
                            android:background="@color/silver_line" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view3"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_phone_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/phone"
                            android:background="@color/silver_line" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view4"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_email_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/email"
                            android:background="@color/silver_line" />


                        <RelativeLayout
                            android:id="@+id/r1"
                            android:layout_width="match_parent"
                            android:layout_below="@+id/view5"
                            android:layout_height="wrap_content">
                            <AutoCompleteTextView
                                android:id="@+id/type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@android:color/transparent"
                                android:drawableLeft="@drawable/ic_select_pen_silver"
                                android:drawablePadding="20dp"
                                android:hint="@string/company_type"
                                android:inputType="text"
                                android:padding="8dp" />
                            <ImageButton
                                android:id="@+id/select_type"
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_drop_down_button"
                                android:layout_alignParentRight="true"
                                android:background="@color/white"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="11dp"/>
                        </RelativeLayout>

                        <View
                            android:id="@+id/view6"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/r1"
                            android:background="@color/silver_line" />

                        <EditText
                            android:id="@+id/password1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view6"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_password_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view7"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/password1"
                            android:background="@color/silver_line" />

                        <EditText
                            android:id="@+id/password2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view7"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_password_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/re_password"
                            android:inputType="textPassword"
                            android:padding="8dp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/cv"
                    android:layout_alignRight="@+id/cv"
                    android:layout_alignBottom="@+id/cv"
                    android:layout_marginRight="-30dp"
                    android:elevation="10dp">

                    <ImageButton
                        android:id="@+id/register_btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btn_company"
                        android:src="@drawable/ic_right_white" />
                </RelativeLayout>

            </RelativeLayout>













        </LinearLayout>
    </ScrollView>
</RelativeLayout>