<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompanyEditProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/company_name"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/company_id"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:hint="Email"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="phone"
                android:hint="Phone"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/address"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/company_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/company_type"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:hint="Current Password"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="Edit"
                android:textColor="#fff"
                android:textSize="15sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="New Password"
                android:inputType="textPassword"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Current Password"
                android:inputType="textPassword"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/password_edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="Change Password"
                android:textColor="#fff"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>