<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLoginActivity">



    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/r_up"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:contentDescription="header"
                    android:scaleType="fitXY"
                    android:src="@drawable/company" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/r_up"
                    android:layout_centerHorizontal="true"
                    android:text="@string/company_login_form"
                    android:textSize="23sp"
                    android:textStyle="bold" />
                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:elevation="1dp"
                    android:src="@drawable/ic_back_white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-70dp"
                android:layout_marginTop="50dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="-3dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_email_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="8dp" />

                        <View
                            android:id="@+id/view1"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@id/email"
                            android:background="#71d2d2d2" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/view1"
                            android:layout_margin="8dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_password_silver"
                            android:drawablePadding="20dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="8dp" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/cv"
                    android:layout_alignRight="@+id/cv"
                    android:layout_alignBottom="@+id/cv"
                    android:layout_marginRight="-30dp"
                    android:elevation="10dp">

                    <ImageButton
                        android:id="@+id/login_btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btn_company"
                        android:src="@drawable/ic_forward_white" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/orange"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

